# libgitxx

./: .clang-format  .gitignore  README.md  meson.build
src/: buffer.hh  index.cc  index.hh  init.hh  signature.cc  signature.hh
src/base/: assert.cc  assert.hh  exception.cc  exception.hh  log.cc  log.hh  types.hh
src/ref/: branch.hh  ref.cc  ref.hh
src/repo/: bare.cc  bare.hh
